--- a/src/main/resources/locales/en/plugins.json
+++ b/src/main/resources/locales/en/plugins.json
@@ -7,7 +7,7 @@
         "protectionPattern": "Protection pattern",
         "protectionPattern-helptext": "A wildcard pattern to describe the tags that are protected from removal. Use * or ? as wildcards.",
         "reduceOwnerPrivilege": "Reduce owner privilege",
-        "reduceOwnerPrivilege-helptext": "Owners are allowed to remove any tag in their repositories by default. However, when checked they may only remove tags that are not protected, i. e. like regular users."
+        "reduceOwnerPrivilege-helptext": "Users with the permission to modify repositories (i. e. owners) are allowed to remove any tag in their repositories by default. However, when checked they may only remove tags that are not protected, i. e. like regular users."
       }
     }
   }
