--- a/src/main/resources/locales/de/plugins.json
+++ b/src/main/resources/locales/de/plugins.json
@@ -10,5 +10,15 @@
         "reduceOwnerPrivilege-helptext": "Benutzer, die die Berechtigung haben ein Repository zu verändern (z.B. Owner), können jeden Tag in dem Repository entfernen. Geschützte Tags können jedoch auch von diesen Benutzern nicht entfernt werden."
       }
     }
+  },
+  "permissions": {
+    "configuration": {
+      "read,write": {
+        "tagprotection": {
+          "displayName": "Global zu schützende Tags konfigurieren",
+          "description": "Darf die global zu schützenden Tags verändern"
+        }
+      }
+    }
   }
 }
