--- a/src/main/resources/locales/en/plugins.json
+++ b/src/main/resources/locales/en/plugins.json
@@ -10,5 +10,15 @@
         "reduceOwnerPrivilege-helptext": "Users with the permission to modify repositories (i. e. owners) are allowed to remove any tag in their repositories by default. However, when checked they may only remove tags that are not protected, i. e. like regular users."
       }
     }
+  },
+  "permissions": {
+    "configuration": {
+      "read,write": {
+        "tagprotection": {
+          "displayName": "Modify globally protected tags",
+          "description": "May modify the globally protected tags"
+        }
+      }
+    }
   }
 }
