Add English documentation, unify docs/assets

--- a/src/main/resources/locales/en/plugins.json
+++ b/src/main/resources/locales/en/plugins.json
@@ -16,7 +16,7 @@
       "read,write": {
         "tagprotection": {
           "displayName": "Modify globally protected tags",
-          "description": "May modify the globally protected tags"
+          "description": "May modifies the globally protected tags"
         }
       }
     }
