--- a/src/main/resources/locales/de/plugins.json
+++ b/src/main/resources/locales/de/plugins.json
@@ -7,7 +7,7 @@
         "protectionPattern": "Muster für die zu schützenden Tags",
         "protectionPattern-helptext": "Ein Platzhalter Muster, das beschreibt, welche Tags vor dem Löschen geschützt werden. * oder ? können als Platzhalter verwendet werden.",
         "reduceOwnerPrivilege": "Reduzierung der Berechtigungen des Owners",
-        "reduceOwnerPrivilege-helptext": "Benutzer, die die Berechtigung haben ein Repository zu verändern (z.B. Owner), können jeden Tag in dem Repository entfernen. Geschützte Tags können jedoch auch von diesen Benutzern nicht entfernt werden."
+        "reduceOwnerPrivilege-helptext": "Benutzer, die die Berechtigung haben ein Repository zu verändern (z.B. Owner), können jeden Tag in dem Repository entfernen. Geschützte Tags können jedoch auch von diesen Benutzern nicht entfernt werden. Benutzer mit der globalen Administratorberechtigung können immer jeden Tag entfernen."
       }
     }
   },
